<resources>
    <string name="app_name">Subak Bali</string>
    <string name="background">background</string>
    <string name="logo_subak">logo_subak</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="incorrect_password">Password must be at least 6 character in length</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="incorrect_email">Incorrect email format</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_data">Data</string>
    <string name="title_pemetaan">Pemetaan</string>
    <string name="title_profil">Profil</string>
    <string name="title_tambah">Tambah</string>
    <string name="data">Data</string>
    <string name="pemetaan">Pemetaan</string>
    <string name="profil">Profil</string>
    <string name="tambah">Tambah</string>
    <string name="search">Cari subak</string>
    <string name="title_activity_add_dokumen">AddDokumen</string>
</resources>