<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_data"
        android:icon="@drawable/ic_data"
        android:title="@string/data" />

    <item
        android:id="@+id/navigation_tambah"
        android:icon="@drawable/ic_add"
        android:title="@string/tambah" />

    <item
        android:id="@+id/navigation_pemetaaan"
        android:icon="@drawable/ic_pemeteaan"
        android:title="@string/pemetaan" />

    <item
        android:id="@+id/navigation_"
        android:icon="@drawable/ic_profile"
        android:title="@string/profil" />
</menu>