<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.diskominfos.subakbali.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_data"
        android:name="com.diskominfos.subakbali.ui.data.DataFragment"
        android:label="@string/title_data"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/navigation_pemetaaan"
        android:name="com.diskominfos.subakbali.ui.pemetaan.PemetaanFragment"
        android:label="@string/title_pemetaan"
        tools:layout="@layout/fragment_pemetaan" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.diskominfos.subakbali.ui.profil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/navigation_tambah"
        android:name="com.diskominfos.subakbali.ui.tambah.JenisFragment"
        android:label="@string/title_tambah"
        tools:layout="@layout/fragment_jenis" />
</navigation>